[tool.poetry]
name = "compile-database"
version = "0.1.0"
description = "A compiler for works.yaml file for my portfolio"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
pastel = "^0.2.0"
pillow = "^7.0.0"
python-slugify = "^4.0.0"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.dev-dependencies]

[too.poetry.scripts]
swdbc = "compile:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
