[tool.poetry]
name = "compile-database"
version = "0.1.0"
description = "A compiler for works.yaml file for my portfolio"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
pastel = "^0.2.0"
pillow = "^7.0.0"
python-slugify = "^4.0.0"
markdown2 = "^2.3.8"
pdf2image = "^1.12.1"
moviepy = "^1.0.1"
watchdog = "^0.10.2"
colorthief = "^0.2.1"
colr = "^0.9.1"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[too.poetry.scripts]
swdbc = "compile:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
